# anthro-growthstandards

./: .gitmodules  CalculatorDemo.ipynb  CreateGrowthStandardZarr.ipynb  Demo.ipynb  GrowthMarkerDistr.ipynb  GrowthMarkerDistrNumeric.ipynb  GrowthMarkerDistrTFP.ipynb  README.md  extract_who_models.py  growthstandards.py  pyproject.toml  setup.py  xarray_stats.py
bcs_ext/: scipy_ext.py
growthstandards/: __init__.py  extended_models.py  gamlss_ext.py  gamlss_models.py  gamlss_params.py  growthstandards.py  split_models.py  who_model_params.npz  who_models.py  xr_stats_ext.py
growthstandards.zarr/: .zmetadata
growthstandards.zarr/arm_c/age/: .zarray  0
growthstandards.zarr/arm_c/l/: 0.0
growthstandards.zarr/arm_c/s/: 0.0
growthstandards.zarr/bmi_height/age/: 0
growthstandards.zarr/bmi_height/l/: .zarray
growthstandards.zarr/bmi_height/m/: 0.0
growthstandards.zarr/bmi_height/s/: 0.0
growthstandards.zarr/bmi_length/: .zattrs
growthstandards.zarr/bmi_length/m/: 0.0
growthstandards.zarr/head_c/age/: .zarray
growthstandards.zarr/head_c/l/: 0.0
growthstandards.zarr/head_c/m/: 0.0
growthstandards.zarr/height/m/: 0.0
growthstandards.zarr/length/: .zattrs
growthstandards.zarr/length/l/: 0.0
growthstandards.zarr/length/m/: .zarray  0.0
growthstandards.zarr/ss/: .zattrs
growthstandards.zarr/ss/s/: .zarray  0.0
growthstandards.zarr/ts/: .zattrs
growthstandards.zarr/ts/l/: 0.0
growthstandards.zarr/weight/: .zattrs
growthstandards.zarr/weight/age/: 0
growthstandards.zarr/wfh/height/: .zarray
growthstandards.zarr/wfh/l/: 0.0
growthstandards.zarr/wfl/: .zattrs
growthstandards.zarr/wfl/l/: 0.0
growthstandards.zarr/wfl/length/: .zarray  .zattrs
growthstandards.zarr/wfl/m/: .zattrs  0.0
growthstandards.zarr/wfl/s/: 0.0
growthstandards/bcs_ext/: __init__.py  log_ext_ufunc.pyx  scipy_ext.py  tfp_jax_ext.py
growthstandards/growthstandards.zarr/: .zmetadata
growthstandards/growthstandards.zarr/arm_c/: .zattrs  zarr.json
growthstandards/growthstandards.zarr/arm_c/age/: zarr.json
growthstandards/growthstandards.zarr/arm_c/m/: 0.0
growthstandards/growthstandards.zarr/arm_c/s/: zarr.json
growthstandards/growthstandards.zarr/bmi_height/: .zattrs  zarr.json
growthstandards/growthstandards.zarr/bmi_height/age/: zarr.json
growthstandards/growthstandards.zarr/bmi_height/l/: 0.0
growthstandards/growthstandards.zarr/bmi_length/: zarr.json
growthstandards/growthstandards.zarr/bmi_length/l/: .zattrs  0.0
growthstandards/growthstandards.zarr/bmi_length/s/: 0.0
growthstandards/growthstandards.zarr/brain/: .zattrs  zarr.json
growthstandards/growthstandards.zarr/brain/mu/: 0.0  zarr.json
growthstandards/growthstandards.zarr/brain/nu/: 0.0
growthstandards/growthstandards.zarr/brain/sigma/: 0.0
growthstandards/growthstandards.zarr/brain/tau/: 0.0
growthstandards/growthstandards.zarr/csf/: .zattrs  zarr.json
growthstandards/growthstandards.zarr/csf/age/: .zarray  .zattrs  0  zarr.json
growthstandards/growthstandards.zarr/csf/mu/: .zarray  0.0
growthstandards/growthstandards.zarr/csf/nu/: 0.0
growthstandards/growthstandards.zarr/csf/sex/: 0
growthstandards/growthstandards.zarr/csf/sigma/: .zattrs  0.0
growthstandards/growthstandards.zarr/csf/tau/: 0.0
growthstandards/growthstandards.zarr/head_c/: .zattrs  zarr.json
growthstandards/growthstandards.zarr/head_c/l/: .zarray  zarr.json
growthstandards/growthstandards.zarr/head_c/s/: 0.0
growthstandards/growthstandards.zarr/height/: .zattrs  zarr.json
growthstandards/growthstandards.zarr/height/l/: 0.0
growthstandards/growthstandards.zarr/height/s/: 0.0  zarr.json
growthstandards/growthstandards.zarr/length/: zarr.json
growthstandards/growthstandards.zarr/length/age/: zarr.json
growthstandards/growthstandards.zarr/length/m/: zarr.json
growthstandards/growthstandards.zarr/length/s/: 0.0
growthstandards/growthstandards.zarr/ss/: zarr.json
growthstandards/growthstandards.zarr/ss/l/: 0.0
growthstandards/growthstandards.zarr/ss/m/: 0.0
growthstandards/growthstandards.zarr/ss/sex/: 0  zarr.json
growthstandards/growthstandards.zarr/ss/sex_enum/: .zattrs
growthstandards/growthstandards.zarr/ts/: zarr.json
growthstandards/growthstandards.zarr/ts/m/: 0.0
growthstandards/growthstandards.zarr/ts/s/: 0.0
growthstandards/growthstandards.zarr/weight/: zarr.json
growthstandards/growthstandards.zarr/weight/age/: zarr.json
growthstandards/growthstandards.zarr/weight/l/: .zarray  0.0
growthstandards/growthstandards.zarr/weight/m/: 0.0  zarr.json
growthstandards/growthstandards.zarr/wfh/: .zattrs  zarr.json
growthstandards/growthstandards.zarr/wfl/: .zattrs  zarr.json
(+64 files in other folders)
