[build-system]
requires = ["setuptools", "setuptools-scm", "numpy", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "growthstandards"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "xarray",
    "xarray-einstats",
    "zarr",
]
dynamic = ["version"]

[project.optional-dependencies]
tfp = ["tensorflow_probability[jax]"]

[tool.setuptools]
zip-safe = false

[tool.setuptools_scm]

[tool.black]
line_length = 120

[tool.isort]
profile = "black"
